redo 5.3 +> polished state/no overflow issue with 1024 view port -> no dividers are dodgy

--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -31,6 +31,8 @@ h1, h3, p {
 .traffic-label, .sm-user-label, .daily-label, .member-label, .message-label, .recent-label, .settings-label {
   font-size: 15px;
   color: black;
+  margin-top: 10px;
+  margin-bottom: 10px;
   // margin: left;
 }
 
