--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -11,7 +11,7 @@
 
 .form-field, .message-textarea  {
     display: flex;
-    // margin: auto;
+    margin: auto;
     text-align: center;
     width: 89%;
     background-color: $seconday-white;
