--- a/scss/components/_grid.scss
+++ b/scss/components/_grid.scss
@@ -79,7 +79,10 @@ justify-content: space-evenly;
     background-color: $main-purple;
     // margin: auto;
 }
+.alert-banner {
+    display: flex;
 
+}
 // // ============================================================
 
 // // MAIN (FLEX) PROPERTIES
